@@ -1,5 +1,11 @@
 2013-09-24  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/kern/emu/hostdisk_unix.c: Declare AROS as non-unix.
+	* grub-core/kern/emu/hostfs.c: Likewise.
+	* util/getroot_unix.c: Likewise.
+
+2013-09-24  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/emu/hostdisk.h (GRUB_FD_STAT_IS_FUNTIONAL): New define.
 	Migrate all explicit defines to this new one.
 
